name.handlebars: Fix alignment of categories line for non-admins.

--- a/src/scss/ia/_dev.scss
+++ b/src/scss/ia/_dev.scss
@@ -300,6 +300,10 @@
     }
 
     #ia-single-top {
+        .fix-height {
+            margin-bottom: 0.5em;
+        }
+
         /* We need to set the color of the dropdown to the background color. */
         .frm__select {
             background-color: transparent;
